--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,8 +7,11 @@
     // uses an internal analyzer which doesn't support some nightly features and ABIs, and
     // doesn't support the way Nix sets up the dev environment
     "rust-analyzer.server.path": "${workspaceFolder}/util/rust-analyzer-shim.bash",
+    // tell rust-analyzer which ABI this crate targets
+    "rust-analyzer.cargo.target": "thumbv7em-none-eabihf",
     // stops the incorrect expansion of some embassy macros
     "rust-analyzer.procMacro.server": null,
+    "rust-analyzer.procMacro.enable": false,
     // tell RA not to check compilation against all targets. This would attempt to analyze
     // embassy code against unsupported ABI targets, which always failes. Each sub-create
     // specifies the targets ABI via that create's settings.json using the 
